@@ -94,3 +94,19 @@ Xstrdup(const char *s)
 	strcpy(sd, s);
     return sd;
 }
+
+char *
+XNFstrdup(const char *s)
+{
+    char *sd;
+    size_t len;
+
+    if (s == NULL)
+	return NULL;
+    
+    len = strlen(s) + 1;
+    sd = (char *)XNFalloc(len);
+    strlcpy(sd, s, len);
+    return sd;
+}
+
